--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "nummu"
 version = "0.1.2"
 description = "An animated image maker."
 authors = ["Ju Lin <soasme@gmail.com>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.6"
