--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.6"
 numpngw = "0.0.7.dev0"
 array2gif = "^1.0"
+Pillow = "5.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.5"
