--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.6"
-numpngw = "0.0.7.dev0"
+numpngw = "0.0.6"
 array2gif = "^1.0"
 Pillow = "5.0.0"
 
