--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.6"
 numpngw = "0.0.6"
-array2gif = "^1.0"
+array2gif = "=1.0.3"
 Pillow = "5.0.0"
 
 [tool.poetry.dev-dependencies]
